# slopes

./: README.md  docker-compose.yml  pyproject.toml
slopes/: app.py  cli.py  config.py  deps.py  main.py
slopes/controllers/: __init__.py  app.py  home.py  login.py  logout.py  signup.py  slope.py
slopes/models/: __init__.py  slope.py  user.py
slopes/plugins/auth/: authorize.py  config.py  dependencies.py  exceptions.py
slopes/views/: __init__.py  package-lock.json  package.json  tailwind.config.js
slopes/views/app/: layout.tsx  main.css
slopes/views/app/auth/: components.tsx  recaptcha.ts
slopes/views/app/auth/login/: page.tsx
slopes/views/app/auth/logout/: page.tsx
slopes/views/app/auth/signup/: page.tsx
slopes/views/app/home/: page.tsx
slopes/views/app/slope/: page.tsx
